# DotsOCR

./: README.md  example.py  pyproject.toml
src/dotsocr/: __init__.py  layout_models.py
